--- a/splittype-experiments/splittext.html
+++ b/splittype-experiments/splittext.html
@@ -19,6 +19,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script>
-<script src="main.js"></script>
+<script src="splittext.js"></script>
 </body>
 </html>
