--- a/splittype-experiments/splittype.html
+++ b/splittype-experiments/splittype.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SplitType Experiments</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
@@ -18,6 +18,7 @@
       <button id="animate">animate</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
-<script src="main.js"></script>
+<script src="https://unpkg.com/split-type"></script>
+<script src="splittype.js"></script>
 </body>
 </html>
