--- a/splittype-experiments/splittype.html
+++ b/splittype-experiments/splittype.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 
-    <div class="splittext">
-        <h1 class="firstline">Oh you don't like <span>&lt;INSERT ANIME HERE&gt;</span>?</h1>
-        <h1 class="secondline">Have you tried <b class="dying">dying?</b></h1>
+    <div class="splittype">
+        <h1 class="firstLine">Oh you don't like <span>&lt;INSERT ANIME HERE&gt;</span>?</h1>
+        <h1 class="secondLine">Have you tried <b class="dying">dying?</b></h1>
       </div>
       
-      <button id="animate">animate</button>
+      <button id="reset">Reset</button>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
 <script src="https://unpkg.com/split-type"></script>
