--- a/splittype-experiments/splittype.html
+++ b/splittype-experiments/splittype.html
@@ -11,8 +11,11 @@
 <body>
 
     <div class="splittype">
-        <h1 class="firstLine">Oh you don't like <span>&lt;INSERT ANIME HERE&gt;</span>?</h1>
-        <h1 class="secondLine">Have you tried <b class="dying">dying?</b></h1>
+        <h1 class="firstLine">OH GOODIE!</h1>
+        <h1 class="secondLine">TIME FOR SOME GOOD OL' FASHIONED <br />
+            <b class="dying">GATEKEEPING</b>
+        </h1>
+        
       </div>
       
       <button id="reset">Reset</button>
