--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -5,30 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Get Bullied</title>
+    <title>> TRMNL_</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-    <main>
-        <h1>Get Bullied</h1>
-        <div class="typewriter intro">
-            <span class="intro-text"></span>
-            <span id="cursor">&nbsp;</span>
-        </div>
-    </main>
+    <header>
+        <img src="imgs/trmnl_logo.svg" alt="">
+    </header>
 
-    <div>
-        <button id="twitter">Twitter</button>
-        <button id="facebook">Facebook</button>
-        <button id="instagram">Instagram</button>
-    </div>
+    <main>
+
+        <div class="typewriter intro">
+            <span class="intro__firstLine"></span>
+            <span class="cursor">&nbsp;</span>
+
+            <!-- <p><b class="typeComments">30% of teenagers experience online bullying everyday.</b></p> -->
+        </div>
+
+        <button id="start">Get started</button>
+
+    </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/TextPlugin.min.js"></script>
