--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Poppins&family=Oswald&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -23,14 +23,22 @@
 
     <main>
 
-        <div class="typewriter intro">
-            <span class="intro__firstLine"></span>
-            <span class="cursor">&nbsp;</span>
+        <section class="typewriter">
+            <div class="intro">
+                <span class="intro__firstLine"></span>
+                <span class="intro__secondLine"></span>
+                <span class="cursor">&nbsp;</span>
+            </div>
+        </section>
 
-            <!-- <p><b class="typeComments">30% of teenagers experience online bullying everyday.</b></p> -->
-        </div>
+        <section class="comments hidden">
+            <p class="comment1">Man, you're so fucking <span class="emphasis">stupid</span></p>
+            <p class="comment2">Some people need to <span class="emphasis">die and make room</span></p>
+            <p class="comment3">I wouldn't even get up if I looked that <span class="emphasis">ugly</span></p>
+            <p class="comment4">Less <span class="emphasis">useless creatures</span> means more oxygen for the rest of us.</p>
+        </section>
 
-        <button id="start">Get started</button>
+        <button>Get Started</button>
 
     </main>
 
