--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -32,10 +32,10 @@
         </section>
 
         <section class="comments hidden">
-            <p class="comment1">Man, you're so fucking <span class="emphasis">stupid</span></p>
-            <p class="comment2">Some people need to <span class="emphasis">die and make room</span></p>
-            <p class="comment3">I wouldn't even get up if I looked that <span class="emphasis">ugly</span></p>
-            <p class="comment4">Less <span class="emphasis">useless creatures</span> means more oxygen for the rest of us.</p>
+            <p>Man, you're so fucking <span class="emphasis">stupid</span></p>
+            <p>Some people need to <span class="emphasis">die and make room</span></p>
+            <p>I wouldn't even get up if I looked that <span class="emphasis">ugly</span></p>
+            <p>Less <span class="emphasis">useless creatures</span> means more oxygen for the rest of us.</p>
         </section>
 
         <button>Get Started</button>
