Wow the loop works

--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Poppins&family=Oswald&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Poppins:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800&family=Oswald&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -31,11 +31,8 @@
             </div>
         </section>
 
-        <section class="comments hidden">
-            <p>Man, you're so fucking <span class="emphasis">stupid</span></p>
-            <p>Some people need to <span class="emphasis">die and make room</span></p>
-            <p>I wouldn't even get up if I looked that <span class="emphasis">ugly</span></p>
-            <p>Less <span class="emphasis">useless creatures</span> means more oxygen for the rest of us.</p>
+        <section class="comments hidden" id="firstMsgSet">
+
         </section>
 
         <button>Get Started</button>
