--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -17,27 +17,28 @@
 
 <body>
 
-    <header>
-        <img src="imgs/trmnl_logo.svg" alt="">
-    </header>
+    <div class="wrapper">
+        <header>
+            <img src="imgs/trmnl_logo.svg" alt="">
+        </header>
 
-    <main>
+        <main>
 
-        <section class="typewriter">
-            <div class="intro">
-                <span class="intro__firstLine"></span>
-                <span class="intro__secondLine"></span>
-                <span class="cursor">&nbsp;</span>
-            </div>
-        </section>
+            <section class="typewriter">
+                <div class="intro">
+                    <span class="intro__firstLine"></span>
+                    <span class="intro__secondLine"></span>
+                    <span class="cursor">&nbsp;</span>
+                </div>
+            </section>
 
-        <section class="comments hidden" id="firstMsgSet">
+            <button>Get Started</button>
+        </main>
+    </div>
 
-        </section>
+    <section class="comments hidden" id="firstMsgSet">
 
-        <button>Get Started</button>
-
-    </main>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/TextPlugin.min.js"></script>
