--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -25,10 +25,31 @@
         <main>
 
             <section class="typewriter">
-                <div class="intro">
+                <div id="intro">
                     <span class="intro__firstLine"></span>
                     <span class="intro__secondLine"></span>
                     <span class="cursor">&nbsp;</span>
+                </div>
+            </section>
+
+            <section id="warning" class="hidden">
+                <p><b>Warning</b></p>
+                <p>Racist and offensive language</p>
+                <p>More disclaimer stuff here</p>
+            </section>
+
+            <section id="info" class="hidden">
+                <div>
+                    <p>Doner shank frankfurter picanha buffalo. Shankle ribeye beef meatloaf landjaeger pastrami buffalo
+                        strip steak pork belly sausage short ribs. Turducken buffalo spare ribs, chislic strip steak
+                        flank
+                        turkey sausage pig biltong shank doner. Pig pork loin ground round short ribs.</p>
+                    <p>Pancetta beef brisket burgdoggen pig tenderloin turducken. Pork chop sirloin shank biltong,
+                        tri-tip
+                        capicola flank. Leberkas shankle jowl kielbasa cow picanha swine chuck salami. Andouille salami
+                        pork
+                        loin meatball, biltong chuck meatloaf capicola. Hamburger tri-tip porchetta tenderloin capicola
+                        buffalo. Bacon fatback chislic ribeye tenderloin salami cow ham hock pastrami.</p>
                 </div>
             </section>
 
@@ -36,12 +57,13 @@
         </main>
     </div>
 
-    <section class="comments hidden" id="firstMsgSet">
+    <section class="comments hidden">
 
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/TextPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/Draggable.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script src="js/main.js"></script>
 
