Added clear button
Expanded disclaimer to include the added clear button to clear screen of all messages.

--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Poppins:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800&family=Oswald&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800&family=Oswald&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -35,7 +35,8 @@
             <section id="warning" class="hidden">
                 <p><b>Warning</b></p>
                 <p>Racist and offensive language</p>
-                <p>More disclaimer stuff here</p>
+                <p>Look for this button to clear the screen at any time:</p>
+                <button>Clear Screen</button>
             </section>
 
             <section id="info" class="hidden">
@@ -53,7 +54,10 @@
                 </div>
             </section>
 
-            <button>Get Started</button>
+            <div class="buttons">
+                <button class="start">Get Started</button>
+                <button class="clear hidden">Clear Screen</button>
+            </div>
         </main>
     </div>
 
