Draft info section
Removed placeholder text and started adding proper body copy to the info section.

--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -40,17 +40,27 @@
             </section>
 
             <section id="info" class="hidden">
-                <div>
-                    <p>Doner shank frankfurter picanha buffalo. Shankle ribeye beef meatloaf landjaeger pastrami buffalo
-                        strip steak pork belly sausage short ribs. Turducken buffalo spare ribs, chislic strip steak
-                        flank
-                        turkey sausage pig biltong shank doner. Pig pork loin ground round short ribs.</p>
-                    <p>Pancetta beef brisket burgdoggen pig tenderloin turducken. Pork chop sirloin shank biltong,
-                        tri-tip
-                        capicola flank. Leberkas shankle jowl kielbasa cow picanha swine chuck salami. Andouille salami
-                        pork
-                        loin meatball, biltong chuck meatloaf capicola. Hamburger tri-tip porchetta tenderloin capicola
-                        buffalo. Bacon fatback chislic ribeye tenderloin salami cow ham hock pastrami.</p>
+                <div class="leftCard">
+                    <h3>Support is available</h3>
+                    <p>If the experience of this website has been distressing for you, please ask for help.</p>
+                    <ul>
+                        <li>Lifeline</li>
+                        <li>Youthline</li>
+                    </ul>
+                </div>
+                <div class="leftCard">
+                    <h3>Where to report cyberbullying</h3>
+                    <p>If you have experienced or witnessed an incident of cyberbullying, please report it to:</p>
+                    <ul>
+                        <li>Netsafe</li>
+                    </ul>
+                </div>
+                <div class="rightCard">
+                    <h3>Interviews with receivers of cyberbullying</h3>
+                    <p>The following are the real experiences of those who have been cyberbullied.</p>
+                    <ul>
+                        <li>Netsafe</li>
+                    </ul>
                 </div>
             </section>
 
