Main content grid
* Added grid styling for the warning and info sections.

* Warning section now includes an example bubble to hopefully demonstrate the drag feature prior to the main effect.

--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -33,34 +33,42 @@
             </section>
 
             <section id="warning" class="hidden">
-                <p><b>Warning</b></p>
-                <p>Racist and offensive language</p>
-                <p>Look for this button to clear the screen at any time:</p>
-                <button>Clear Screen</button>
+                <div class="grid">
+                    <div class="item">
+                        <p><b>Warning</b></p>
+                        <p>Racist and offensive language</p>
+                        <p>Look for this button to clear the screen at any time:</p>
+                        <button>Clear Screen</button>
+                    </div>
+                    <div class="item">
+                        <p>Drag the bubble!</p>
+                        <p class="exampleBubble">Drag me in any direction to move!</p>
+                    </div>
+                </div>
             </section>
 
             <section id="info" class="hidden">
-                <div class="leftCard">
-                    <h3>Support is available</h3>
-                    <p>If the experience of this website has been distressing for you, please ask for help.</p>
-                    <ul>
-                        <li>Lifeline</li>
-                        <li>Youthline</li>
-                    </ul>
-                </div>
-                <div class="leftCard">
-                    <h3>Where to report cyberbullying</h3>
-                    <p>If you have experienced or witnessed an incident of cyberbullying, please report it to:</p>
-                    <ul>
-                        <li>Netsafe</li>
-                    </ul>
-                </div>
-                <div class="rightCard">
-                    <h3>Interviews with receivers of cyberbullying</h3>
-                    <p>The following are the real experiences of those who have been cyberbullied.</p>
-                    <ul>
-                        <li>Netsafe</li>
-                    </ul>
+                <div class="grid">
+                    <div class="item">
+                        <h3>Support is available</h3>
+                        <p>If the experience of this website has been distressing for you, please ask for help.</p>
+                        <ul>
+                            <li>Lifeline</li>
+                            <li>Youthline</li>
+                        </ul>
+                        <h3>Where to report cyberbullying</h3>
+                        <p>If you have experienced or witnessed an incident of cyberbullying, please report it to:</p>
+                        <ul>
+                            <li>Netsafe</li>
+                        </ul>
+                    </div>
+                    <div class="item">
+                        <h3>Interviews with receivers of cyberbullying</h3>
+                        <p>The following are the real experiences of those who have been cyberbullied.</p>
+                        <ul>
+                            <li>Netsafe</li>
+                        </ul>
+                    </div>
                 </div>
             </section>
 
@@ -71,7 +79,7 @@
         </main>
     </div>
 
-    <section class="comments hidden">
+    <section id="comments" class="hidden">
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
