Gradient bg + copywriting

--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>> TRMNL_</title>
+    <title>> TRMNL_ - Experience cyberbullying</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -41,7 +41,6 @@
                         <button>Clear Screen</button>
                     </div>
                     <div class="item">
-                        <p>Drag the bubble!</p>
                         <p class="exampleBubble">Drag me in any direction to move!</p>
                     </div>
                 </div>
@@ -53,20 +52,35 @@
                         <h3>Support is available</h3>
                         <p>If the experience of this website has been distressing for you, please ask for help.</p>
                         <ul>
-                            <li>Lifeline</li>
-                            <li>Youthline</li>
+                            <li><a href="https://www.lifeline.org.nz/services/lifeline-helpline/" alt="Lifeline"
+                                    target="_blank">Lifeline</a></li>
+                            <li><a href="https://www.youthline.co.nz/" alt="Youthline" target="_blank">Youthline</a>
+                            </li>
                         </ul>
                         <h3>Where to report cyberbullying</h3>
                         <p>If you have experienced or witnessed an incident of cyberbullying, please report it to:</p>
+                        <h3>Netsafe</h3>
                         <ul>
-                            <li>Netsafe</li>
+                            <li>Email: <a href="mailto:help@netsafe.org.nz"
+                                    alt="Report an incident to Netsafe via email">help@netsafe.org.nz</a></li>
+                            <li>Freephone: 0508 NETSAFE (0508 638 723)</li>
+                            <li>Submit a report online: <a href="https://report.netsafe.org.nz/hc/en-au/requests/new"
+                                    alt="Report an incident to Netsafe online">https://report.netsafe.org.nz/hc/en-au/requests/new</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="item">
                         <h3>Interviews with receivers of cyberbullying</h3>
                         <p>The following are the real experiences of those who have been cyberbullied.</p>
                         <ul>
-                            <li>Netsafe</li>
+                            <li><iframe src="https://www.youtube.com/embed/WdYt-OM2Xng" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe></li>
+                            <li><iframe src="https://www.youtube.com/embed/P77xCJ1waDM" title="YouTube video player"
+                                    frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe></li>
                         </ul>
                     </div>
                 </div>
