--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -49,7 +49,7 @@
             <section id="info" class="hidden">
                 <div class="grid">
                     <div class="item">
-                        <h3>Support is available</h3>
+                        <h2>Support is available</h2>
                         <p>If the experience of this website has been distressing for you, please ask for help.</p>
                         <ul>
                             <li><a href="https://www.lifeline.org.nz/services/lifeline-helpline/" alt="Lifeline"
@@ -57,19 +57,19 @@
                             <li><a href="https://www.youthline.co.nz/" alt="Youthline" target="_blank">Youthline</a>
                             </li>
                         </ul>
-                        <h3>Where to report cyberbullying</h3>
+                        <h2>Where to report cyberbullying</h2>
                         <p>If you have experienced or witnessed an incident of cyberbullying, please report it to:</p>
                         <h3>Netsafe</h3>
                         <ul>
                             <li>Email: <a href="mailto:help@netsafe.org.nz"
                                     alt="Report an incident to Netsafe via email">help@netsafe.org.nz</a></li>
                             <li>Freephone: 0508 NETSAFE (0508 638 723)</li>
-                            <li>Submit a report online: <a href="https://report.netsafe.org.nz/hc/en-au/requests/new"
-                                    alt="Report an incident to Netsafe online">https://report.netsafe.org.nz/hc/en-au/requests/new</a>
+                            <li><a href="https://report.netsafe.org.nz/hc/en-au/requests/new"
+                                    alt="Report an incident to Netsafe online">Submit a report online</a>
                             </li>
                         </ul>
                     </div>
-                    <div class="item">
+                    <!-- <div class="item">
                         <h3>Interviews with receivers of cyberbullying</h3>
                         <p>The following are the real experiences of those who have been cyberbullied.</p>
                         <ul>
@@ -82,7 +82,7 @@
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                     allowfullscreen></iframe></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </section>
 
