--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>> TRMNL_ - Experience cyberbullying</title>
+    <title>DARK MSGS_ - Experience cyberbullying</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -19,7 +19,7 @@
 
     <div class="wrapper">
         <header>
-            <img src="imgs/trmnl_logo.svg" alt="">
+            <img src="imgs/darkmsgs_logo.svg" alt="DARK MESSAGES - Experience cyberbullying">
         </header>
 
         <main>
