--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -35,7 +35,7 @@
             <section id="warning" class="hidden">
                 <div class="grid">
                     <div class="item">
-                        <p><b>Warning</b></p>
+                        <h2>Warning</h2>
                         <p>Racist and offensive language</p>
                         <p>Look for this button to clear the screen at any time:</p>
                         <button>Clear Screen</button>
