--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -13,6 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mediaQueries.css">
 </head>
 
 <body>
@@ -36,7 +37,7 @@
                 <div class="grid">
                     <div class="item">
                         <h2>Warning</h2>
-                        <p>Racist and offensive language</p>
+                        <p>This website contains derogatory and hateful language, including racism, sexism, death threats, general abuse, and other offensive language</p>
                         <p>Look for this button to clear the screen at any time:</p>
                         <button>Clear Screen</button>
                     </div>
@@ -49,6 +50,12 @@
             <section id="info" class="hidden">
                 <div class="grid">
                     <div class="item">
+                        <p>While the internet can be a great place to engage in communities to share experiences and learn new things, the internet is <b>not</b> a safe space.</p>
+                        <p>We all desire to be treated with respect, but there are still large portions of online platforms where some individuals go against this, spreading hate and harassment towards others.</p>
+                        <p>Despite <a href="https://netsafe.org.nz/what-is-the-hdca/" title="What is the HHarmful Digital Communications Act?">cyberbullying being illegal</a>, <b>one third</b> of NZ teens experience it <b>everyday</b>.</p>
+                        <p>Cyberbullying is harassment and is <b>not</b> okay. If you or someone you know has experienced cyberbullying, <b>help is available</b>.</p>
+                    </div>
+                    <div class="item">
                         <h2>Support is available</h2>
                         <p>If the experience of this website has been distressing for you, please ask for help.</p>
                         <ul>
@@ -59,7 +66,7 @@
                         </ul>
                         <h2>Where to report cyberbullying</h2>
                         <p>If you have experienced or witnessed an incident of cyberbullying, please report it to:</p>
-                        <h3>Netsafe</h3>
+                        <h3>NetSafe</h3>
                         <ul>
                             <li>Email: <a href="mailto:help@netsafe.org.nz"
                                     alt="Report an incident to Netsafe via email">help@netsafe.org.nz</a></li>
@@ -69,20 +76,6 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- <div class="item">
-                        <h3>Interviews with receivers of cyberbullying</h3>
-                        <p>The following are the real experiences of those who have been cyberbullied.</p>
-                        <ul>
-                            <li><iframe src="https://www.youtube.com/embed/WdYt-OM2Xng" title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe></li>
-                            <li><iframe src="https://www.youtube.com/embed/P77xCJ1waDM" title="YouTube video player"
-                                    frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe></li>
-                        </ul>
-                    </div> -->
                 </div>
             </section>
 
