--- a/Artefact Prototype/index.html
+++ b/Artefact Prototype/index.html
@@ -18,6 +18,10 @@
 
 <body>
 
+    <audio id="matrix" preload="auto">
+        <source src="supermarket-pa-104750.mp3"></source>
+    </audio>
+
     <div class="wrapper">
         <header>
             <img src="imgs/darkmsgs_logo.svg" alt="DARK MESSAGES - Experience cyberbullying">
@@ -37,7 +41,8 @@
                 <div class="grid">
                     <div class="item">
                         <h2>Warning</h2>
-                        <p>This website contains derogatory and hateful language, including racism, sexism, death threats, general abuse, and other offensive language</p>
+                        <p>This website contains derogatory and hateful language, including racism, sexism, death
+                            threats, general abuse, and other offensive language.</p>
                         <p>Look for this button to clear the screen at any time:</p>
                         <button>Clear Screen</button>
                     </div>
@@ -50,10 +55,16 @@
             <section id="info" class="hidden">
                 <div class="grid">
                     <div class="item">
-                        <p>While the internet can be a great place to engage in communities to share experiences and learn new things, the internet is <b>not</b> a safe space.</p>
-                        <p>We all desire to be treated with respect, but there are still large portions of online platforms where some individuals go against this, spreading hate and harassment towards others.</p>
-                        <p>Despite <a href="https://netsafe.org.nz/what-is-the-hdca/" title="What is the HHarmful Digital Communications Act?">cyberbullying being illegal</a>, <b>one third</b> of NZ teens experience it <b>everyday</b>.</p>
-                        <p>Cyberbullying is harassment and is <b>not</b> okay. If you or someone you know has experienced cyberbullying, <b>help is available</b>.</p>
+                        <p>While the internet can be a great place to engage in communities to share experiences and
+                            learn new things, the internet is <b>not</b> a safe space.</p>
+                        <p>We all desire to be treated with respect, but there are still large portions of online
+                            platforms where some individuals go against this, spreading hate and harassment towards
+                            others.</p>
+                        <p>Despite <a href="https://netsafe.org.nz/what-is-the-hdca/"
+                                title="What is the HHarmful Digital Communications Act?">cyberbullying being
+                                illegal</a>, <b>one third</b> of NZ teens experience it <b>everyday</b>.</p>
+                        <p>Cyberbullying is harassment and is <b>not</b> okay. If you or someone you know has
+                            experienced cyberbullying, <b>help is available</b>.</p>
                     </div>
                     <div class="item">
                         <h2>Support is available</h2>
@@ -93,6 +104,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/TextPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/Draggable.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
